# sozio-thin

./: .env.example  .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: windows-installer.yml
catalog/: joins.json  licenses.json  resources.json  selection.json  topics.json
catalog/profiles/: bfs_pxweb_px-x-0102010000_103.json  bfs_pxweb_px-x-0102020000_104.json  bfs_pxweb_px-x-0102020000_201.json  bfs_pxweb_px-x-0102020300_102.json  bfs_pxweb_px-x-0103010200_101.json  bfs_pxweb_px-x-0103010200_111.json  bfs_pxweb_px-x-0103010200_151.json  bfs_pxweb_px-x-0103020200_103.json  bfs_pxweb_px-x-0103020300_103.json  bfs_pxweb_px-x-0103030100_101.json  bfs_pxweb_px-x-0204000000_111.json  bfs_pxweb_px-x-0602010000_102.json  bfs_pxweb_px-x-0602010000_108.json  bfs_pxweb_px-x-0606010000_104.json  bfs_pxweb_px-x-0702000000_104.json  bfs_pxweb_px-x-0702000000_106.json  bfs_pxweb_px-x-0702000000_107.json  bfs_pxweb_px-x-0702000000_108.json  bfs_pxweb_px-x-0904010000_202.json  bfs_pxweb_px-x-0904010000_203.json  bfs_pxweb_px-x-0904030000_106.json  bfs_pxweb_px-x-0904030000_107.json  bfs_pxweb_px-x-1003020000_103.json  bfs_pxweb_px-x-1003020000_203.json  bfs_pxweb_px-x-1103020200_121.json  bfs_pxweb_px-x-1106010100_104.json  (+74 more)
docs/wiki/: Home.md  (+5 more)
installer/: integrations.ps1  quickstart.html  sozio-thin.iss
mcpb/: manifest.json
scripts/: build_mcpb.ps1  build_wiki.py  build_windows_installer.ps1  export_catalog.py  select_resources.py  verify_catalog.py
tests/: test_catalog.py  test_pxweb.py  test_search.py  test_sql.py  test_tools.py  test_wiki.py
(+129 files in other folders)
